added character output

--- a/01_EthernetWebServer/WebUI.html
+++ b/01_EthernetWebServer/WebUI.html
@@ -70,8 +70,8 @@
         function buttonincrement() {
 
             jQuery.ajax({
-                type: "POST",
-                url: 'http://192.168.50.142/?7',
+                type: "GET",
+                url: 'http://192.168.50.142/?789789789',
                 //dataType: 'json',
                 //data: { arg1: buttoninc, arg2: 2 },
 
